# fragmentcolor

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLARIFYING_QUESTIONS.md  CONTRIBUTING.md  Cargo.toml  HEALTHCHECK_BLOCKED.md  HEALTHCHECK_KOTLIN.md  LICENCE.md  LICENSE.md  Package.swift  Pipfile  README.md  README_JS.md  README_JS.tpl.md  README_PY.md  README_PY.tpl.md  REFACTOR.md  RELEASE_CHECKLIST.md  ROADMAP.md  WARP.md  build-bkp.rs  build.rs  build_android  build_ios  build_py  build_py.sh  build_web  build_web.sh  bump_version.py  check  clippy  clippy.sh  coverage  deny.toml  example  healthcheck  (+22 more)
crates/plrender/: Cargo.toml  build.rs
crates/plrender-core/: Cargo.toml
crates/plrender-core/src/: color.rs  lib.rs
crates/plrender-core/src/gpu/: context.rs  mod.rs  renderpass.rs  target.rs  texture.rs
crates/plrender-core/src/renderer/: context.rs  mod.rs  renderer.rs  renderpass.rs  target.rs
crates/plrender-core/src/renderer/resources/: buffer.rs  mesh.rs  mod.rs  region.rs  sampler.rs  target.rs  texture.rs
crates/plrender-core/src/scene/: builder.rs  camera.rs  entity.rs  light.rs  mesh.rs  mod.rs  node.rs  scene.rs  space.rs  sprite.rs
crates/plrender-py/: Cargo.toml  main.py  pyproject.toml
crates/plrender-py/examples/: multiple_windows.py  single_window.py
crates/plrender-py/src/: lib.rs  pyo3.md  window.rs
crates/plrender-py/src/app/: window.rs
crates/plrender-wasm/: Cargo.toml  LICENSE_MIT
crates/plrender-wasm/src/: lib.rs  shapes.rs  window.rs
crates/plrender-wasm/src/app/: canvas.rs  window.rs
crates/plrender/src/: app.rs  lib.rs  vertex.rs  window.rs
crates/plrender/src/animation/: animator.rs  mod.rs
crates/plrender/src/app/: app.rs  commands.rs  container.rs  error.rs  event_loop.rs  events.rs  macros.rs  meta.rs  mod.rs  panics.rs  window.rs
crates/plrender/src/app/api/: mod.rs
crates/plrender/src/asset/: gltf.rs  mod.rs  obj.rs
crates/plrender/src/components/: animation.rs  camera.rs  color.rs  controller.rs  empty.rs  hidden.rs  light.rs  mesh.rs  mod.rs  renderable.rs  shader.rs  shape.rs  sprite.rs  sprite_map.rs  transform.rs
crates/plrender/src/events/: event_loop.rs  events.rs  mod.rs
crates/plrender/src/geometry/: cuboid.rs  mod.rs  plane.rs  shape.rs  sphere.rs  vertex.rs
crates/plrender/src/loader/: gltf.rs  obj.rs
crates/plrender/src/math/: cg.rs  linear_algebra.rs  mod.rs
crates/plrender/src/math/geometry/: mod.rs  quad.rs  relative_quad.rs  shape.rs
crates/plrender/src/pass/: flat.rs  phong.rs  phong.wgsl  real.rs  real.wgsl  solid.rs
crates/plrender/src/renderer/: limits.rs  mod.rs  options.rs  renderer.rs  renderpass.rs  target.rs
crates/plrender/src/renderer/renderpass/: buffer.rs  flat.rs  flat.wgsl  mod.rs  phong.rs  real.rs  solid.rs  toy.rs  (+1 more)
crates/plrender/src/renderpass/: flat.rs  flat.wgsl  phong.rs  real.rs  solid.rs
crates/plrender/src/resources/: buffer.rs  mesh.rs  mod.rs  resources.rs  shaders.rs  texture.rs
crates/plrender/src/scene/: builder.rs  entity.rs  light.rs  macros.rs  mod.rs  node.rs  object.rs  scene.rs  sprite.rs  transform.rs
examples/: Cargo.toml  circle.rs  circle.wgsl  demo.rs  hello_triangle.wgsl  multiobject.rs  multipass.rs  triangle.rs
examples/examples/: cubes.rs  gaze.rs
examples/javascript/: cypress.config.js  demo.js  gaze_overlay_plrender.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
examples/javascript/cypress/support/: commands.js  e2e.js
examples/javascript/src/: main.js
examples/python/: demo.py  headless.py  main.py  multiobject.py  multiple_windows.py  requirements.txt  sprite.py
examples/python/poc/: README.md
examples/python/poc/aoi_extraction/: Dockerfile  cpu.py  png.wgsl
examples/python/poc/gaze_overlay/: requirements.txt
examples/rust/: Cargo.toml  build.rs
examples/rust/cubes/: Cargo.toml
examples/rust/cubes/src/: main.rs
examples/rust/examples/: _size_inference.rs  app_healthcheck.rs  circle.rs  compute_texture.rs  cubes.rs  fullscreen_triangle.rs  gallery_camera.rs  gallery_color.rs  gallery_dither.rs  gallery_easing.rs  gallery_encode.rs  gallery_geom.rs  gallery_gradient.rs  gallery_hash.rs  gallery_intersect.rs  gallery_lighting.rs  gallery_map.rs  gallery_math.rs  gallery_noise.rs  gallery_pattern.rs  gallery_postfx.rs  gallery_raymarch.rs  gallery_sample.rs  gallery_sdf.rs  gallery_sdf2d.rs  gaze.rs  gltf_scene.rs  locks.rs  mesh_triangle.rs  mesh_two_textured_quads.rs  model_pbr_triangle.rs  model_viewer.rs  multiobject.rs  multipass.rs  multipass_shadows.rs  particles.rs  particles_1m.rs  particles_compute.rs  particles_splat.rs  particles_splat_3d.rs  (+9 more)
examples/rust/examples/shaders/: circle_invalid.wgsl
examples/rust/loaders/: gltf.rs  mod.rs  obj.rs
examples/rust/renderpass/: passes.js  phong.rs  real.rs  solid.rs  text.rs  toy.rs  toy.wgsl
examples/rust/sprite/: Cargo.toml  cubes.rs
examples/rust/sprite/src/: main.rs
examples/rust/src/: lib.rs  main.rs  tui_util.rs
examples/src/: lib.rs
examples/web/: README.md  demo.js  index.html  package.json  passes.js  webpack.config.js
examples/web/js/: compact.js  index.js  mocks.js  original.js
examples/web/legacy/: README.md  index.html
examples/web/legacy/pkg/: LICENCE.md  README.md  package.json  plrender.d.ts  plrender.js  plrender_bg.wasm  plrender_bg.wasm.d.ts
examples/web/static/: index.html  indexv2.html
plrender/: Cargo.toml
plrender/assets/shaders/: camera.wgsl  circle.frag  circle.vert  circle.wgsl  gaze.frag  instances.wgsl  shape.wgsl
plrender/src/: lib.rs
plrender/src/controllers/: controller.rs  mod.rs
plrender/src/events/: handler.rs  scheduler.rs
plrender/src/platform/web/: utils.rs
plrender/src/renderer/: mod.rs  renderer.rs  screen.rs  vertex.rs  window.rs
plrender/src/renderer/debug/: camera.rs  instances.rs
plrender/src/shapes/: shape.rs
wip/renderer/: Cargo.toml  build.rs
wip/renderer/src/renderer/: layouts.rs  pipeline.rs  renderer.rs  shaders.rs  shape.rs  state.rs
wip/renderer/src/shaders/: common.wgsl
(+6549 files in other folders)
