[package]
name = "fragmentcolor"
version = "0.12.3"
homepage = "https://fragmentcolor.org"
repository = "https://github.com/vista-art/fragmentcolor"
description = "Universal GPU abstraction for Javascript, Python, Swift and Kotlin"
authors = ["Vista Tech & Art GmbH"]
readme = "README.md"
license = "MIT"
keywords = ["graphics", "rendering", "wgpu", "cross-platform", "art"]
categories = ["rendering", "rendering::engine", "parsing"]
edition = "2024"

[lib]
name = "fragmentcolor"
crate-type = ["staticlib", "cdylib", "rlib"]

# uniffi-bindgen CLI entry point. Built when the crate is compiled for a desktop
# host so mobile build scripts can run `cargo run --bin uniffi-bindgen generate ...`.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[workspace]
resolver = "3"
members = ["examples/rust"]

[features]
# Default: embed the whole public shader registry so every slug
# (`Shader::new("postfx/vignette")`) resolves offline, no network needed.
# The whole library is ~86 KB of WGSL source across 233 files; the binary
# size cost is negligible. Slim down with `default-features = false` and
# pick specific `shaders-<category>` features below if size matters.
#
# `network` is intentionally NOT in defaults: a graphics library should
# not pull a TLS stack into every consumer's dep tree. Opt in with
# `cargo add fragmentcolor --features network` if you need URL fetching.
#
# The web build (`build_web`) passes `--no-default-features` to wasm-pack
# so the wasm bundle stays slim — slugs resolve via the registry over
# the browser's `fetch` instead.
default = ["shaders-all"]
python = ["pyo3", "numpy", "pollster"]
winit = ["dep:winit", "pollster"]

# `network` — opt-in HTTP fetch on native targets.
#
# When enabled, `Shader::fetch(url)` and `Renderer::create_texture(url)` resolve
# remote sources via `ureq` + `native-tls` on Linux, macOS, and Windows. When
# disabled (the default on native and mobile), the `fetch` API still exists on
# every binding but returns `NetworkError::FeatureDisabled` if a URL is passed;
# raw source, file paths, and embedded registry slugs (the `shaders-*` features
# below) keep working without network. The web binding always uses the
# browser's `fetch()` and ignores this feature.
#
# Rationale: a graphics library should not drag a TLS stack into every
# consumer's dep tree by default. Users who want URL fetching opt in
# explicitly with `cargo add fragmentcolor --features network` or `maturin
# build --features network`.
network = ["dep:ureq"]

# ---------------------------------------------------------------------------
# Embedded shader registry — opt in to bake registry shaders into the binary
# ---------------------------------------------------------------------------
# Themed per-category, like web-sys's per-type features. Each `shaders-<cat>`
# embeds every `.wgsl` under `docs/website/public/shaders/<cat>/` so slugs
# like `postfx/vignette` resolve synchronously and offline (no URL fetch,
# no async dance, no live network at startup). Slugs whose category isn't
# enabled fall back to the URL-fetch path.
shaders-camera   = []
shaders-color    = []
shaders-dither   = []
shaders-easing   = []
shaders-encode   = []
shaders-geom     = []
shaders-gradient = []
shaders-hash     = []
shaders-intersect = []
shaders-lighting = []
shaders-map      = []
shaders-material = []
shaders-math     = []
shaders-mesh     = []
shaders-noise    = []
shaders-pattern  = []
shaders-postfx   = []
shaders-raymarch = []
shaders-sample   = []
shaders-sdf      = []
shaders-sdf2d    = []

# Convenience umbrellas. Pick a vibe; pull the categories it implies.
shaders-2d = [
    "shaders-color",
    "shaders-gradient",
    "shaders-noise",
    "shaders-pattern",
    "shaders-postfx",
    "shaders-sdf2d",
]
shaders-3d = [
    "shaders-camera",
    "shaders-color",
    "shaders-lighting",
    "shaders-material",
    "shaders-mesh",
    "shaders-noise",
    "shaders-raymarch",
    "shaders-sample",
    "shaders-sdf",
]
shaders-all = [
    "shaders-camera",
    "shaders-color",
    "shaders-dither",
    "shaders-easing",
    "shaders-encode",
    "shaders-geom",
    "shaders-gradient",
    "shaders-hash",
    "shaders-intersect",
    "shaders-lighting",
    "shaders-map",
    "shaders-material",
    "shaders-math",
    "shaders-mesh",
    "shaders-noise",
    "shaders-pattern",
    "shaders-postfx",
    "shaders-raymarch",
    "shaders-sample",
    "shaders-sdf",
    "shaders-sdf2d",
]

[dependencies]
wgpu = { version = "30", features = ["glsl", "wgsl", "webgl", "naga-ir"] }
naga = { version = "30", features = ["wgsl-in", "glsl-in"] }
parking_lot = "0.12"
derive-new = "0.7"
thiserror = "2.0"
bytemuck = "1.0"
futures = "0.3"
lsp_doc = "0.2"
dashmap = "6.1"
glam = "0.33"
sha2 = "0.11"
log = "0.4"

# Serialization
csscolorparser = { version = "0.8", default-features = false, features = [
    "named-colors",
] }

# Asset loading
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "hdr",
] }
ktx2 = "0.5"
# Read-only glTF 2.0 / GLB loader. `import` is the default file-I/O surface
# (`gltf::import` / `import_slice`); `utils` adds the typed accessors that
# decode `u8`/`u16` indices and tightly-packed vertex attributes; the
# `KHR_lights_punctual` extension is opt-in.
gltf = { version = "1", features = ["KHR_lights_punctual", "KHR_texture_transform"] }

# Python FFI (optional)
pyo3 = { version = "0.29", features = [
    "abi3-py39",
    "experimental-async",
], optional = true }
numpy = { version = "0.29", optional = true }

# MacOS
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3" }

# Apple (MacOS + iOS)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6" }

# Android & iOS FFI (uniffi lives here so it's available on every non-wasm target,
# including desktop so that `cargo run --bin uniffi-bindgen` works locally)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { version = "0.32", features = ["cli"] }
winit = { version = "0.30", features = ["serde"], optional = true }
pollster = { version = "0.4", optional = true }

# Desktop-only HTTP fetch — optional, gated on the `network` feature; off by
# default. When `network` is enabled, ureq uses `native-tls`, routing HTTPS
# through each platform's system TLS: OpenSSL on Linux (preinstalled in
# maturin's manylinux containers), Schannel on Windows, Secure Transport on
# macOS. Avoids `rustls` (which pulls in `ring`, whose pregenerated ARM
# assembly fails to cross-compile under manylinux's aarch64 GCC).
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ureq = { version = "3", default-features = false, features = ["native-tls"], optional = true }

# Mobile (iOS + Android) always needs pollster for blocking on adapter/device
# creation inside sync FFI entry points (uniffi can't marshal non-Send futures).
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
pollster = "0.4"

# Android Specific
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
jni_fn = "0.1"
ndk-sys = "0.6"
raw-window-handle = "0.6"

# WASM-Specific
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
# Pinned to 0.2.118, the last version compatible with the `impl_js_bridge!`
# macro in `src/macros.rs`. wasm-bindgen 0.2.126 changed the `RefFromWasmAbi`
# ABI from `u32` to `WasmPtr`, and the macro hands that ABI a raw pointer.
# Lift the pin once the macro is updated for the new ABI.
wasm-bindgen = "=0.2.118"
console_log = "1"
lsp_doc = "0.2"
js-sys = "0.3"
gloo-utils = { version = "0.3", features = ["serde"] }
web-sys = { version = "0.3", features = [
    'OffscreenCanvasRenderingContext2d',
    'CanvasRenderingContext2d',
    'WebGl2RenderingContext',
    'WebGlRenderingContext',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'OffscreenCanvas',
    'RequestMode',
    'RequestInit',
    'EventTarget',
    'ImageData',
    'Document',
    'Location',
    'Response',
    'Element',
    'Request',
    'Window',
] }

[build-dependencies]
phf = { version = "0.14", features = ["macros"] }
syn = { version = "2.0", features = ["full"] }
phf_codegen = "0.14"
cfg_aliases = "0.2"
quote = "1"
uniffi = { version = "0.32", features = ["build"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
image-compare = "0.5"
pollster = "0.4"
fastrand = "2"
tempfile = "3"
proptest = "1"
