[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "fragmentcolor"
python-source = "platforms/python"
features = ["python", "pyo3/extension-module"]

[project]
name = "fragmentcolor"
version = "0.10.5"
description = "Easy cross-platform GPU Rendering for Javascript, Python, Swift and Kotlin"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["graphics", "rendering", "wgpu", "cross-platform", "art"]
authors = [{ name = "Rafael Beckel" }]
maintainers = [{ name = "Rafael Beckel" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Rust",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = ["rendercanvas", "gltf"]

[project.optional-dependencies]
test = ["pytest < 5.0.0", "pytest-cov[all]"]

[project.urls]
homepage = "https://fragmentcolor.org"
documentation = "https://fragmentcolor.org/welcome"
repository = "https://github.com/vista-art/fragmentcolor"
changelog = "https://github.com/vista-art/fragmentcolor/releases"
