[package]
name = "fragmentcolor-example-sprite"
description = "Example desktop application using FragmentColor"
repository = "https://github.com/vista-art/fragmentcolor/examples/rust"
authors = ["Vista Tech & Art GmbH"]
license-file = "LICENCE.md"
version = "0.1.0"
edition = "2021"

[[example]]
name = "sprite"

[dependencies]
fragmentcolor = { path = "../crates/fragmentcolor" }
env_logger = "0.10"
wgpu_text = "0.8"
pollster = "0.3"
instant = "0.1"
image = "0.24"
winit = "0.28"
rand = "0.8.5"
wgpu = "0.18"
mint = "0.5"
log = "0.4"
