[package]
name = "plrender"
description = "An unified API to render Pupil Labs' video enrichments across multiple platforms"
repository = "https://gitlab.com/pupil-labs/pupil-cloud/pl-video-processor"
authors = ["Pupil Labs GmbH"]
license-file = "LICENCE.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plrender"
description = "Dynamic library to be used by other apps or in the browser"
crate-type = ["cdylib", "rlib"]

[features]
texture = ["dep:image"]
camera = ["texture"]
instances = ["camera"]
depth = ["camera", "texture"]

[build-dependencies]
cfg_aliases = "0.1"

[dependencies]
thiserror = "1.0"
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
palette = "0.7"
cgmath = "0.18"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.13", features = [ "derive" ] }
phf = { version = "0.11", features = ["macros"] }
smart-default = "0.7.1"
enum_dispatch = "0.3.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = {version = "0.24", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'EventTarget',
]}

[dev-dependencies]
"wasm-bindgen-test" = "0.3"

[profile.release]
opt-level = "s" # Optimize for small binary size
