[package]
name = "plrender-core"
version = "0.4.0"
edition = "2021"
authors = ["Pupil Labs GmbH"]
license-file = "LICENCE.md"
description = "PLRender Internal API"
repository = "https://gitlab.com/pupil-labs/pupil-cloud/pl-render"

[features]
default = []

[dependencies]
# public
bytemuck = { version = "1.14", features = ["derive"] }
hecs = { version = "0.10", features=["macros"] }
mint = "0.5"
# the latest version deprecates the RawWindowHandle trait
# and not all upstream window vendors have implemented it
raw-window-handle = "0.5"
wgpu = "0.17"
# private
ddsfile = "0.5"
glam = { version = "0.24", features = ["mint"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp", "hdr", "dds"] }
log = "0.4"
csscolorparser = "0.6"

[build-dependencies]
cfg_aliases = "0.1"
