[package]
name = "plrender-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# @TODO https://github.com/PyO3/pyo3/issues/1857
# pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3 = { version = "0.20" }
pollster = "0.3"
numpy = "0.20"
ndarray = "0.15"
mint = "0.5"
plr = { package="plrender", path = "../plrender" }
#plrender-macros = { path = "../plrender-macros" }
