[package]
name = "plrender-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pollster = "0.3"
numpy = "0.20"
ndarray = "0.15"
mint = "0.5"
plr = { package="plrender", path = "../plrender" }
winit = "0.28"

[build-dependencies]
pyo3-build-config = { version = "0.20", features = ["extension-module"] }
