[package]
name = "plrender-wasm"
version = "0.1.0"
authors = ["Rafael Beckel <rgb@pupil-labs.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
plr = { package="plrender", path = "../plrender" }
plrender-macros = { path = "../plrender-macros" }
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.11" }
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'EventTarget',
    'Location',
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
cfg_aliases = "0.1"
