[package]
name = "plrender"
description = "An unified API to render video enrichments across multiple platforms"
repository = "https://gitlab.com/pupil-labs/pupil-cloud/pl-render"
authors = ["Pupil Labs GmbH"]
license-file = "LICENCE.md"
version = "0.4.6"
edition = "2021"

[lib]
name = "plrender"
crate-type = ["cdylib", "rlib"]

[features]
default = ["window", "assets"]
window = ["raw-window-handle", "winit"]
shape = ["lyon"]
assets = ["obj", "gltf"]

[dependencies]
# public
wgpu = "0.18"
bytemuck = { version = "1.14", features = ["derive"] }
hecs = { version = "0.10", features=["macros"] }
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
pollster = "0.3"
bitflags = "2.4"
fxhash = "0.2"
mint = "0.5"

# We can update both of them when wgpu releases this
# https://github.com/gfx-rs/wgpu/pull/4202
raw-window-handle = { version = "0.5", optional = true }
winit = { version = "0.28.7", optional = true }

# 3D Object loading libraries
gltf = { version = "1", features = ["names", "utils", "KHR_lights_punctual"], optional = true }
obj = { version = "0.10", optional = true }

# private
ddsfile = "0.5"
glam = { version = "0.24", features = ["mint"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp", "hdr", "dds"] }
lyon = { version = "1", optional = true }
instant = "0.1"
log = "0.4"
csscolorparser = "0.6"

[build-dependencies]
cfg_aliases = "0.1"
