[package]
name = "fce"
description = "FragmentColor Examples"
repository = "https://github.com/vista-art/fragmentcolor"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
fragmentcolor = { path = "../..", features = ["winit"] }
winit = { version = "0.30" }
pollster = "0.4"
fastrand = "2"

[build-dependencies]
cfg_aliases = "0.2"
