[package]
name = "fce"
description = "FragmentColor Examples"
repository = "https://github.com/vista-art/fragmentcolor"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
fragmentcolor = { path = "../..", features = ["winit"] }

# Window examples
winit = { version = "0.30" }
env_logger = "0.11"
pollster = "0.4"
fastrand = "2"
bytemuck = "1"

# CLI examples
crossterm = "0.29"
ratatui = "0.29"
anyhow = "1"

[build-dependencies]
cfg_aliases = "0.2"
