[package]
name = "fce"
description = "FragmentColor Examples"
repository = "https://github.com/vista-art/fragmentcolor"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
fragmentcolor = { path = "../..", features = ["winit"] }

# Window examples
winit = { version = "0.30" }
env_logger = "0.11"
pollster = "0.4"
fastrand = "2"
bytemuck = "1"

# PNG output for the registry-gallery example
image = { version = "0.25", default-features = false, features = ["png"] }

# CLI examples
crossterm = "0.29"
ratatui = "0.29"
anyhow = "1"

[build-dependencies]
cfg_aliases = "0.2"

# Tutorial examples — each tutorial step's `example.rs` is registered here
# so `cargo build --examples -p fce` validates that every published step
# still compiles and runs as a complete program. Multi-step tutorials get
# one entry per step folder.
[[example]]
name = "tutorial_01_hello_triangle_three_lines"
path = "../../docs/tutorials/01-hello-triangle/01-three-lines/example.rs"

[[example]]
name = "tutorial_01_hello_triangle_compose_noise"
path = "../../docs/tutorials/01-hello-triangle/02-compose-noise/example.rs"

[[example]]
name = "tutorial_01_hello_triangle_resolution_uniform"
path = "../../docs/tutorials/01-hello-triangle/03-resolution-uniform/example.rs"

[[example]]
name = "tutorial_01_hello_triangle_vertex_gradient"
path = "../../docs/tutorials/01-hello-triangle/04-vertex-gradient/example.rs"

[[example]]
name = "tutorial_01_hello_triangle_particle_trail"
path = "../../docs/tutorials/01-hello-triangle/05-particle-trail/example.rs"

[[example]]
name = "tutorial_01_hello_triangle_postfx_pass"
path = "../../docs/tutorials/01-hello-triangle/06-postfx-pass/example.rs"
