[package]
name = "plrender-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
hecs = "0.10"
pollster = "0.3"
palette = "0.7"
cgmath = "0.18"
serde_json = "1"
naga_oil = "0.9"
wgpu_text = "0.8"
csscolorparser = "0.6"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.13", features = [ "derive" ] }
phf = { version = "0.11", features = ["macros"] }
smart-default = "0.7.1"
enum_dispatch = "0.3.12"
tobj = { version = "4", features = [
    "async",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = {version = "0.24", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png"]

[build-dependencies]
cfg_aliases = "0.1"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
