[package]
name = "plrender-example-cubes"
description = "Example desktop application using PLRender"
repository = "https://gitlab.com/pupil-labs/pupil-cloud/pl-render/examples/rust"
authors = ["Pupil Labs GmbH"]
license-file = "LICENCE.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plrender-example-cubes"

[dependencies]
plrender = { path = "../../../crates/plrender" }
pollster = "0.3"
instant = "0.1"
rand = "0.8.5"
log = "0.4"
mint = "0.5"
hecs = "0.10"
